# DEEP-LEARNING-WITH-PYTORCH

./: .gitignore
applications/DensePose/: Densepose_Inference_using_detectron2.ipynb
applications/UNetForBrainMriAbnormalitySegmentation/: U-NetUsingPyTorchHub.ipynb
applications/adamOptimizerAssignment/: adamOptimizerAssignment.ipynb
applications/binaryClassifierFromScratch/: binaryClassifierFromScratch.ipynb
applications/checkTrainingPipeline/: checkTrainingPipeline.ipynb
applications/classificationEvaluationMetrics/: classificationEvaluationMetrics.ipynb
applications/classificationMetrics/: classificationMetrics.ipynb
applications/computeEvaluationMetrics/: computeEvaluationMetrics.ipynb
applications/customDataLoader/: Custom_Dataloader.ipynb
applications/densePose/: Densepose_Inference_using_detectron2.ipynb  Densepose_training.ipynb
applications/diceCoefficientMetric/: diceCoefficientMetric.ipynb
applications/fasterRcnnFineTuning/: fasterRcnnFineTuning.ipynb
applications/fasterRcnnFineTuningTraining/: Faster-RCNN-Fine-tuning-Experiment.ipynb
applications/fasterRcnnUsingTorchvision/: fasterRcnnUsingTorchvision.ipynb
applications/fcnAndDeepLabUsingTorchvision/: fcnAndDeepLabUsingTorchvision.ipynb
applications/focalLossImplementation/: focalLossImplementation.ipynb
applications/gradientDescent/: gradientDescent.ipynb
applications/gradientDescentAssignment/: gradientDescentAssignment.ipynb
applications/imageClassificationMlpOnMnist/: imageClassificationMlpOnMnist.ipynb
applications/implementingLeNet/: implementingLeNet.ipynb
applications/implementingLeNetWithBatchNorm/: implementingLeNetWithBatchNorm.ipynb
applications/inferenceOnProduction_ONNX/: Inference_on_Production.ipynb
applications/instanceSegmentationUsingMaskRcnn/: instanceSegmentationUsingMaskRCNN.ipynb
applications/introductionToGans/: 01_Introduction_to_Generative_Adversarial_Networks.ipynb
applications/introductionToNumPy/: introductionToNumPy.ipynb
applications/introductionToPytorch/: introductionToPytorch.ipynb
applications/kaggleCompetitionClassification/: kaggleCompetitionClassification.ipynb
applications/kaggleCompetitionSemanticSegmentation/: kaggleCompetitionSemanticSegmentation.ipynb
applications/libTorchIntroduction/: CMakeLists.txt  main.cpp
applications/libTorchTrain/: CMakeLists.txt  CMakePresets.json  main.cpp
applications/linkNetArchitecture/: linkNetArchitecture.ipynb
applications/linkNetWithVgg16/: linkNetWithVGG16.ipynb
applications/loadImageFolderInDataLoader/: loadImageFolderInDataLoader.ipynb
applications/lrScheduler/: lrScheduler.ipynb
applications/mlpUsingFunctionalApi/: mlpUsingFunctionalApi.ipynb
applications/mlpUsingSequentialApi/: mlpUsingSequentialApi.ipynb
(+52 files in other folders)
